rust/crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_blocked_last_within_pending_80.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
assertion_line: 123
expression: "draw(&tasks, 80, 24, false)"
---
⠋ blocker-running
◻ free-work-a
◻ free-work-b
◻ blocked-work › blocked by #3
