rust/crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_cjk_subjects_60.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
expression: "draw(&tasks, 60, 24, true)"
---
3 tasks (1 done, 1 in progress, 1 open)  Ctrl+T to collapse
⠋ 重 构 认 证 模 块
◻ 编 写 单 元 测 试
✔ 更 新 文 档 并 提 交
