rust/crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_empty_80.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
assertion_line: 62
expression: "draw(&[], 80, 24, true)"
---
