rust/crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_inline_mixed_80.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
expression: "draw(&tasks, 80, 24, false)"
---
⠋ write unit tests
◻ update the docs
✔ refactor auth module
