rust/crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_narrow_header_45.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
assertion_line: 248
expression: "draw(&tasks, 45, 24, true)"
---
3 tasks (1 done, 1 in progress, 1 open)
⠋ b
◻ c
✔ a
