rust/crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_next_hint_pending_80.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
expression: buffer_to_string(&buf)
---
Focus · waiting-work
