rust/crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_priority_order_80.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
assertion_line: 116
expression: "draw(&tasks, 80, 24, false)"
---
• first-in-progress
◻ first-pending
✔ first-completed
