rust/crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_standalone_mixed_80.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
assertion_line: 81
expression: "draw(&tasks, 80, 24, true)"
---
3 tasks (1 done, 1 in progress, 1 open)  Ctrl+T to collapse
⠋ write unit tests
◻ update the docs
✔ refactor auth module
