rust/crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_subject_truncated_40.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
expression: "draw(&tasks, 40, 24, true)"
---
2 tasks (0 done, 1 in progress, 1 open)
⠋ refactor the entire auth…
◻ another very long task t…
